xrpl-wasm-stdlib/xrpl-macros/tests/pubkey/fail_invalid_chars.stderr
error: Invalid key: 02C7387FFC25C156CA7F8A6D760C8D01EF642CEE9CE4680C33FFB3FF39AFECFEZZ
 --> tests/pubkey/fail_invalid_chars.rs:5:13
  |
5 |     pubkey!("02C7387FFC25C156CA7F8A6D760C8D01EF642CEE9CE4680C33FFB3FF39AFECFEZZ");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
